Bug 147924 - KMail composer charset ignored (only if embedded in Kontact)
Summary: KMail composer charset ignored (only if embedded in Kontact)
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-07-16 16:14 UTC by nimok
Modified: 2014-02-28 17:51 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nimok 2007-07-16 16:14:08 UTC
Version:            (using KDE KDE 3.5.6)
Installed from:    Ubuntu Packages
OS:                Linux

The list of charsets specified for composed mails is not taken into account when KMail runs embedded in Kontact and utf-8 (default charset on my system) is used for all sent mails according to the header: Content-Type: text/plain; charset="utf-8"
This happens independent of the characters used in the mail.

If KMail is not embedded in Kontact everything works fine.
Comment 1 tiflopin 2007-11-15 17:29:42 UTC
The same for KDE 3.5.8 KMail 1.9.6 Kontact 1.2.4
Comment 2 Pascal Vandeputte 2014-02-28 13:55:05 UTC
This seems to be an old bug... still I experienced this today (4.12.2).

In my case, after moving utf-8 to the top of the list, mails were still sent using the old settings until I restarted Kontact.
Comment 3 Laurent Montel 2014-02-28 17:40:24 UTC
I confirm it.
I will investigate why when we change list it needs to restart kmail before to use it
Comment 4 Laurent Montel 2014-02-28 17:51:04 UTC
Git commit 987637c9bbc891404baec154c8590ebf082d9c09 by Montel Laurent.
Committed on 28/02/2014 at 17:50.
Pushed by mlaurent into branch 'KDE/4.12'.

Fix Bug 147924 - KMail composer charset ignored (only if embedded in Kontact)

FIXED-IN: 4.12.3
(or 4.12.4 don't know when tag is created)

M  +3    -0    kmail/kmkernel.cpp

http://commits.kde.org/kdepim/987637c9bbc891404baec154c8590ebf082d9c09