Fix Bug 147924 - KMail composer charset ignored (only if embedded in Kontact)

FIXED-IN: 4.12.3
(or 4.12.4 don't know when tag is created)

BUG: 147924